# bunny

./: Dockerfile  INSTALL.md  INSTALLATION_GUIDE.md  README.md  bunny.aur.install  bunny.snapcraft.yaml  docker-compose.yml  fix-ios-network.sh  install-ios-fixed.sh  install-ios-offline.sh  install-ios.sh  install-mobile-ash.sh  install-mobile.sh  install-universal.sh  install.bat  install.py  install.sh  package.json  pyproject.toml  requirements-mobile.txt  requirements-ui.txt  setup.bat  setup.sh
bunny_env/: pyvenv.cfg
src/bunny/: cli.py  downloader.py  inference_engine.py  models.py  web_manager.py
tmp/: serve_ui.out
web/ui/: index.html  package-lock.json  package.json  tsconfig.json
web/ui/src/: App.mobile.tsx  App.tsx  index.css  main.tsx  mobile.css
web/ui/src/components/: ChatPanel.tsx  HelpDrawer.tsx  ModelList.tsx  RightPanel.tsx  SettingsDrawer.tsx  Sidebar.tsx  WorkspaceDrawer.tsx
