[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunny"
version = "0.1.3"
description = "Bunny: Local LLM runner using native llama.cpp and Hugging Face GGUF models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.20.0",
    "click>=8.1.0",
    "requests>=2.28.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.scripts]
b = "bunny.cli:main"